# python-quickstart

./: .gitignore  .init.sh  .init.sh.orig  Makefile  README.md  pyproject.toml  setup.cfg  setup.cfg.template
default-cfg/: dotenv.dist
myproject/: hello.py  main.py
src/myproject/: hello.py
tests/: tests.py
