[project]
name = "myproject"
version = "0.1.0"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = [
  "setuptools",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project.scripts]
# scheme: entry-point = "mypackage.myproject:main_cli"
hello = "myproject.hello"

[project.urls]
"Homepage" = "https://gitlab.univ-lille.fr/fabrice.ducos/python-minimal-package"
