[project]
name = "myproject"
dynamic = ["dependencies", "version"]
authors = [
  { name="Fabrice Ducos", email="fabrice.ducos@univ-lille.fr" },
]

description = "Description of the project"
readme = "README.md"
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    #"License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"myproject" = "src/myproject"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = [
  "setuptools",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project.scripts]
# scheme: entry-point = "mypackage.myproject:main_cli"
hello = "src.myproject.__main__:main"

[project.urls]
"Homepage" = "https://gitlab.univ-lille.fr/fabrice.ducos/python-minimal-package"
"Bug Tracker" = "https://gitlab.univ-lille.fr/fabrice.ducos/python-minimal-package/-/issues"
