[project]
name = "myproject"
dynamic = ["dependencies", "version"]
authors = [
  { name="__author__", email="__email__" },
]

description = "Description of the project"
readme = "README.md"
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    #"License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"myproject" = "myproject"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = [
  "setuptools",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project.scripts]
# scheme: entry-point = "mypackage.myproject:main_cli"
main = "myproject.main:main"

[project.urls]
"Homepage" = "https://gitlab.univ-lille.fr/path/to/myproject"
"Bug Tracker" = "https://gitlab.univ-lille.fr/path/to/myproject/-/issues"
